--- a/foundations/01-css-methods/index.html
+++ b/foundations/01-css-methods/index.html
@@ -7,13 +7,11 @@
     <title>Methods for Adding CSS</title>
     <link rel="stylesheet" href="style.css">
     <style>
-      div{
-        background-color: red;
-        color: white;
-        font-size: 32px;
-        text-align: center;
-        font-weight: bold;
-      }
+      p{
+    background-color: green;
+    color: white;
+    font-size: 18px;
+    }
     </style>
   </head>
   <body>
