--- a/grid/03-grid-layout-3/index.html
+++ b/grid/03-grid-layout-3/index.html
@@ -11,20 +11,20 @@
     <div class="container">
 
       <div class="header">
-        <div class="logo">Header Logo</div>
+        <div class="logo" id="logo">Pokemon</div>
         <div class="menu">
           <ul>
-            <li>header link one</li>
-            <li>header link two</li>
-            <li>header link three</li>
-            <li>header link four</li>
+            <li>Home</li>
+            <li>Pokemon Types</li>
+            <li>Generations</li>
+            <li>Characters</li>
           </ul>
         </div>
       </div>
 
       <div class="sidebar">
         <div class="photo">
-          <p>placeholder for image</p>    
+          <img src="pokemon.jpg">   
         </div>
         <div class="side-content">Box 1
         </div>
